Added-Delete-User-Challenges
Added a new where is possible remove all the challenges of a user
